--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="inner">
 			<div class="item">
-				<img src="1.jpeg" alt="" class="img">
+				<img src="1.png" alt="" class="img">
 				<button class="btn" id="btn1">Add</button>
 			</div>
 			<div class="item">
